Fix a crash when reparenting an item in QGraphicsView.

Before calling addItem we need to invalidate the depth otherwise if
someone call anything relating to sorting when itemChange is called
(because of the scene change for instance) then qt_closestItemFirst
for example can crash because of an invalid state.

Task-number:QTBUG-6932
Reviewed-by:janarve